--- a/src/styles.css
+++ b/src/styles.css
@@ -4,10 +4,23 @@ html{
 
 body{
     margin: 0;
-   padding: 0; 
-   font-family: "Roboto",sans-serif;
-   font-size: 1rem;
+    padding: 0; 
+    font-family: "Roboto",sans-serif;
+    font-size: 1rem;
 }
+
+
+/* @media screen and (min-width: 468px) and (max-width : 600px) {
+    body{
+        background-color: lightblue;
+    }
+} */
+
+/* @media screen and (orientation: landscape)  {
+    body{
+        background-color: rgb(173, 230, 176);
+    }
+} */
 
 h1,h2,h3,h4,h5,h6{
     font-family : "Inter", sans-serif;
@@ -206,4 +219,10 @@ h3{
 .copy_right{
     text-align: center;
     font-size: 0.875rem;
+}
+
+@media screen and (min-width: 768px) {
+    body{
+        background-color: lightblue;
+    }
 }
